tests/nightly/function/compile_fail/extra_precondition.stderr
error[E0308]: mismatched types
 --> $DIR/extra_precondition.rs:8:5
  |
8 | /     #[assure("is bar", reason = "foo is bar")]
9 | |     #[assure("is baz", reason = "foo is baz")]
  | |______________________________________________^ expected a tuple with 1 element, found one with 2 elements
  |
  = note: expected tuple `(pre::CustomCondition<"is bar">,)`
             found tuple `(pre::CustomCondition<"is bar">, pre::CustomCondition<"is baz">)`
